--- a/ifmis/sidebar.css
+++ b/ifmis/sidebar.css
@@ -10,32 +10,32 @@ body {
 }
 
 .navbar {
-    width: 250px;
+    width: 330px;
     height: auto;
     position: fixed;
-    margin-left: -300px;
-    background-color: #7952b3;
+    top: 0;
+    bottom: 0;
+    margin-left: -350px;
+    background-color: #1b364d;
     transition: 0.4s;
+    overflow-y: scroll;
 }
 
 .nav-link {
-    font-size: 1.25em;
+    font-size: 1.1em;
 }
 
-.nav-link:active,
-.nav-link:focus,
-.nav-link:hover {
-    background-color: #ffffff26;
+.nav-link:active, .nav-link:focus, .nav-link:hover {
+    background-color: #94a5db34;
+    border-left: 5px solid yellowgreen;
 }
 
 .dropdown-menu {
     background-color: #7952b3;
 }
 
-.dropdown-item:active,
-.dropdown-item:focus,
-.dropdown-item:hover {
-    background-color: #ffffff26;
+.dropdown-item:active, .dropdown-item:focus, .dropdown-item:hover {
+    background-color: #94a5db34;
 }
 
 .my-container {
@@ -53,7 +53,7 @@ body {
 /* for main section */
 
 .active-cont {
-    margin-left: 250px;
+    margin-left: 350px;
 }
 
 #menu-btn {
